# worksheets

./: .gitignore  README.md  worksheets.cabal
doc/: concept.graffle
src/: Main.hs
