name:                   worksheets
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                Unspecified
homepage:               /dev/null

category:               Unclassified
synopsis:               Generate some worksheets for the kids
description:            Generate some worksheets for the kids

Executable worksheets
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:        base >= 3,
                        diagrams-lib,
                        diagrams-svg,
                        random-fu
